--- a/htdocs/service/index.html
+++ b/htdocs/service/index.html
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="footer">
-            <div class="footer-bottom">© 2016 浙江品安科技有限公司 版权所有 浙ICP备15017675号-1</div>
+            <div class="footer-bottom">© 2016 杭州知珠网络科技有限公司 版权所有 浙ICP备15017675号-1</div>
         </div>
     </div>
     <div class="mobile" style="display: block;">
